@@ -6,6 +6,7 @@ Release 0.5.8
 * fix a bug for some paths in Windows (thanks to Albert Miklos)
 * add a wrapper for NeuraLynx (.ncs) file format
 * fix a bug in the installation of the MATLAB GUI
+* fix a bug to see results in MATLAB GUI with only 1 channel
 
 =============
 Release 0.5.7
